[metadata]
name = certmonitor
version = 0.1
description = CertMonitor is a certificate expiration monitoring software
author = IncognitoCoding
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IncognitoCoding/certmonitor
classifiers =
    Development Status :: 4 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

platforms = any

[options]
python_requires = >= 3.9
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
	black==22.3.0
    pylint==2.13.9
    cffi==1.15.1
    fchecker==0.15.5
    fexception==0.3.17
    ictoolkit@git+https://github.com/IncognitoCoding/ictoolkit.git@81333715ace47de8e875d4d502c7d4e195a4b2a6

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov --cov-report term-missing -s
    --verbose
norecursedirs =
    dist
    build
testpaths = tests

[bdist_wheel]
universal = 1